5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4429/executions/1716_2503.log
== TEST (2019-05-16 08:46:33) 
-- CODE:
num=int(input("digite um numero: "))
contadora=1
apr=4

while(contadora<num):
	denominador=(contadora+2)
	apr=apr+(-1)**(contadora+1)*4/denominador
	
	contadora=contadora+1
	
print(round(apr, 8))
-- OUTPUT:
4.78713398
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 08:47:03) 
-- CODE:
num=int(input("digite um numero: "))
contadora=1
apr=4

while(contadora<num):
	denominador=(contadora+2)
	apr=apr+(-1)**(contadora+1)*4/denominador
	
	contadora=contadora+1
	
print(round(apr, 8))
-- EXECUTION TIME:
0.205831
-- TEST CASE 1:
---- input:
136
---- correct output:
3.13423981
---- user output:
4.78713398
-- TEST CASE 2:
---- input:
22
---- correct output:
3.09616153
---- user output:
4.85765666
-- TEST CASE 3:
---- input:
15
---- correct output:
3.20818565
---- user output:
4.6514874
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 08:47:34) 
-- CODE:
num=int(input("digite um numero: "))
contadora=1
apr=4

while(contadora<num):
	denominador=(contadora+2)
	apr=apr+(-1)**(contadora+1)*4/denominador
	
	contadora=contadora+1
	
print(round(apr, 8))
-- OUTPUT:
4.78713398
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 08:48:05) 
-- CODE:
num=int(input("digite um numero: "))
contadora=1
apr=4

while(contadora<num):
	denominador=(contadora+1)
	apr=apr+(-1)**(contadora+1)*4/denominador
	
	contadora=contadora+1
	
print(round(apr, 8))
-- OUTPUT:
5.2420631
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 08:48:35) 
-- CODE:
num=int(input("digite um numero: "))
contadora=1
apr=4

while(contadora<num):
	denominador=(contadora+1)
	apr=apr+(-1)**(contadora+1)*4/denominador
	
	contadora=contadora+1
	
print(round(apr, 8))
-- EXECUTION TIME:
0.116176
-- TEST CASE 1:
---- input:
136
---- correct output:
3.13423981
---- user output:
5.2420631
-- TEST CASE 2:
---- input:
22
---- correct output:
3.09616153
---- user output:
5.31625638
-- TEST CASE 3:
---- input:
15
---- correct output:
3.20818565
---- user output:
5.0985126
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 08:48:44) 
-- CODE:
num=int(input("digite um numero: "))
contadora=1
apr=4

while(contadora<num):
	denominador=(contadora+1)
	apr=apr+(-1)**(contadora+1)*4/denominador
	
	contadora=contadora+1
	
print(round(apr, 8))
-- OUTPUT:
5.2420631
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 08:51:02) 
-- CODE:
num=int(input("digite um numero: "))
contadora=1
apr=4

while(contadora<num):
	denominador=(contadora+2)
	apr=apr+(-1)**(contadora+2)*4/denominador
	
	contadora=contadora+1
	
print(round(apr, 8))
-- OUTPUT:
3.21286602
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 08:51:30) 
-- CODE:
num=int(input("digite um numero: "))
contadora=1
apr=4

while(contadora<num):
	denominador=(contadora+2)
	apr=apr+(-1)**(contadora+2)*4/denominador
	
	contadora=contadora+1
	
print(round(apr, 8))
-- OUTPUT:
3.21286602
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 08:51:58) 
-- CODE:
num=int(input("digite um numero: "))
contadora=1
apr=4

while(contadora<num):
	denominador=(contadora+2)
	apr=apr+(-1)**(contadora+2)*4/denominador
	
	contadora=contadora+1
	
print(round(apr, 8))
-- EXECUTION TIME:
0.144668
-- TEST CASE 1:
---- input:
136
---- correct output:
3.13423981
---- user output:
3.21286602
-- TEST CASE 2:
---- input:
22
---- correct output:
3.09616153
---- user output:
3.14234334
-- TEST CASE 3:
---- input:
15
---- correct output:
3.20818565
---- user output:
3.3485126
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 08:52:06) 
-- CODE:
num=int(input("digite um numero: "))
contadora=1
apr=4

while(contadora<num):
	denominador=(contadora+2)
	apr=apr+(-1)**(contadora+2)*4/denominador
	
	contadora=contadora+1
	
print(round(apr, 8))
-- OUTPUT:
3.21286602
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 08:55:53) 
-- CODE:
num=int(input("digite um numero: "))
contadora=1
apr=4

while(contadora<num):
	denominador=(contadora+2)
	apr=apr+(-1)**(contadora)*4/denominador
	
	contadora=contadora+1
	
print(round(apr, 8))
-- OUTPUT:
3.21286602
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 08:56:18) 
-- CODE:
num=int(input("digite um numero: "))
contadora=1
apr=4

while(contadora<num):
	denominador=(contadora+2)
	apr=apr+(-1)**(contadora)*4/denominador
	
	contadora=contadora+1
	
print(round(apr, 8))
-- OUTPUT:
3.21286602
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 08:57:32) 
-- CODE:
num=int(input("digite um numero: "))
contadora=0
apr=4

while(contadora<num):
	denominador=(contadora+2)
	apr=apr+(-1)**(contadora)*4/denominador
	
	contadora=contadora+1
	
print(round(apr, 8))
-- OUTPUT:
5.21286602
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 08:58:37) 
-- CODE:
num=int(input("digite um numero: "))
contadora=1
apr=4

while(contadora<num):
	denominador=(contadora)
	apr=apr+(-1)**(contadora+2)*4/denominador
	
	contadora=contadora+1
	
print(round(apr, 8))
-- OUTPUT:
1.21265133
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 08:59:14) 
-- CODE:
num=int(input("digite um numero: "))
contadora=1
apr=4

while(contadora<num):
	denominador=(contadora+3)
	apr=apr+(-1)**(contadora)*4/denominador
	
	contadora=contadora+1
	
print(round(apr, 8))
-- OUTPUT:
3.42481514
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 08:59:38) 
-- CODE:
num=int(input("digite um numero: "))
contadora=1
apr=4

while(contadora<num):
	denominador=(contadora+1)
	apr=apr+(-1)**(contadora)*4/denominador
	
	contadora=contadora+1
	
print(round(apr, 8))
-- OUTPUT:
2.7579369
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:00:09) 
-- CODE:
num=int(input("digite um numero: "))
contadora=1
apr=4

while(contadora<num):
	denominador=(contadora+2)
	apr=apr+(-1)**(contadora)*4/denominador
	
	contadora=contadora+1
	
print(round(apr, 8))
-- OUTPUT:
3.21286602
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:00:40) 
-- CODE:
num=int(input("digite um numero: "))
contadora=1
apr=4

while(contadora<num):
	denominador=(contadora+2)
	apr=apr+(-1)**(contadora)*4/denominador
	
	contadora=contadora+1
	
print(round(apr, 8))
-- OUTPUT:
3.21286602
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:01:10) 
-- CODE:
num=int(input("digite um numero: "))
contadora=1
apr=4

while(contadora<num):
	denominador=(contadora+2)
	apr=apr+(-1)**(contadora+1)*4/denominador
	
	contadora=contadora+1
	
print(round(apr, 8))
-- OUTPUT:
4.78713398
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:01:37) 
-- CODE:
num=int(input("digite um numero: "))
contadora=1
apr=4

while(contadora<num):
	denominador=(contadora+2)
	apr=apr+(-1)**(contadora*1)*4/denominador
	
	contadora=contadora+1
	
print(round(apr, 8))
-- OUTPUT:
3.21286602
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:02:10) 
-- CODE:
num=int(input("digite um numero: "))
contadora=1
apr=4

while(contadora<=num):
	denominador=(contadora+2)
	apr=apr+(-1)**(contadora*1)*4/denominador
	
	contadora=contadora+1
	
print(round(apr, 8))
-- OUTPUT:
3.24185152
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:02:47) 
-- CODE:
num=int(input("digite um numero: "))
contadora=1
apr=4

while(contadora<num):
	denominador=(contadora+2)
	apr=apr+(-1)**(contadora*1)*4/denominador
	
	contadora=contadora+1
	
print(round(apr, 8))
-- OUTPUT:
3.21286602
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:04:28) 
-- CODE:
num=int(input("digite um numero: "))
contadora=1
apr=1

while(contadora<num):
	denominador=(contadora+2)
	apr=apr+(-1)**(contadora)*4/denominador
	
	contadora=contadora+1
	
print(round(apr, 8))
-- OUTPUT:
0.21286602
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:05:02) 
-- CODE:
num=int(input("digite um numero: "))
contadora=1
apr=num

while(contadora<num):
	denominador=(contadora+2)
	apr=apr+(-1)**(contadora)*4/denominador
	
	contadora=contadora+1
	
print(round(apr, 8))
-- OUTPUT:
135.21286602
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:05:43) 
-- CODE:
num=int(input("digite um numero: "))
contadora=1
apr=4

while(contadora<num):
	denominador=(contadora+2)
	apr=apr+(-1)**(contadora)*4/denominador
	
	contadora=contadora+1
	
print(round(apr, 8))
-- OUTPUT:
3.21286602
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:07:47) 
-- CODE:
num=int(input("digite um numero: "))
contadora=1
apr=4

while(contadora<num):
	denominador=(contadora+1)+(contadora+1)
	apr=apr+(-1)**(contadora)*4/denominador
	
	contadora=contadora+1
	
print(round(apr, 8))
-- OUTPUT:
3.37896845
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:08:22) 
-- CODE:
num=int(input("digite um numero: "))
contadora=1
apr=4

while(contadora<num):
	denominador=(contadora+2)+(contadora+1)
	apr=apr+(-1)**(contadora)*4/denominador
	
	contadora=contadora+1
	
print(round(apr, 8))
-- OUTPUT:
3.51777484
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:08:52) 
-- CODE:
num=int(input("digite um numero: "))
contadora=1
apr=4

while(contadora<num):
	denominador=(contadora+2)
	apr=apr+(-1)**(contadora)*4/denominador
	
	contadora=contadora+1
	
print(round(apr, 8))
-- OUTPUT:
3.21286602
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:09:54) 
-- CODE:
num=int(input("digite um numero: "))
contadora=1
apr=4

while(contadora<num):
	denominador=(contadora+2)
	apr=apr+(-1)**(contadora+2)*4/denominador
	
	contadora=contadora+1
	
print(round(apr, 8))
-- OUTPUT:
3.21286602
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:10:18) 
-- CODE:
num=int(input("digite um numero: "))
contadora=1
apr=4

while(contadora<num):
	denominador=(contadora+2)
	apr=apr+(-1)**(contadora+2)*4/denominador
	
	contadora=contadora+1
	
print(round(apr, 8))
-- OUTPUT:
3.21286602
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:11:01) 
-- CODE:
num=int(input("digite um numero: "))
contadora=1
apr=4

while(contadora<num):
	denominador=(contadora+1)+1
	apr=apr+(-1)**(contadora+2)*4/denominador
	
	contadora=contadora+1
	
print(round(apr, 8))
-- OUTPUT:
3.21286602
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:11:21) 
-- CODE:
num=int(input("digite um numero: "))
contadora=1
apr=4

while(contadora<num):
	denominador=(contadora+1)+1
	apr=apr+(-1)**(contadora+2)*4/denominador
	
	contadora=contadora+1
	
print(round(apr, 8))
-- OUTPUT:
3.21286602
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:12:25) 
-- CODE:
num=int(input("digite um numero: "))
contadora=1
apr=4

while(contadora<num):
	denominador=(contadora+1)+1
	apr=apr+(-1)**(contadora)*4/denominador
	
	contadora=contadora+1
	
print(round(apr, 8))
-- OUTPUT:
3.21286602
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:14:52) 
-- CODE:
num=int(input("digite um numero: "))
contadora=1
apr=4

while(contadora<num):
	denominador=(contadora*1+1)
	apr=apr+(-1)**(contadora)*4/denominador
	
	contadora=contadora+1
	
print(round(apr, 8))
-- OUTPUT:
2.7579369
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:15:35) 
-- CODE:
num=int(input("digite um numero: "))
contadora=1
apr=4

while(contadora<num):
	denominador=(contadora*1+1)
	apr=apr+(-1)**(contadora)*4/denominador
	
	contadora=contadora+1
	
print(round(apr, 8))
-- OUTPUT:
2.7579369
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:18:19) 
-- CODE:
num=int(input("digite um numero: "))
contadora=1
apr=4

while(contadora<num):
	denominador=(contadora+2)
	apr=apr+(-1)**(contadora)*4/denominador
	
	contadora=contadora+1
	
print(round(apr, 8))
-- OUTPUT:
3.21286602
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:20:49) 
-- CODE:
num=int(input("digite um numero: "))
contadora=1
apr=1

while(contadora<num):
	denominador=(contadora+2)
	apr=apr+(-1)**(contadora)*4/denominador
	
	contadora=contadora+1
	
print(round(apr, 8))
-- OUTPUT:
0.21286602
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:21:45) 
-- CODE:
num=int(input("digite um numero: "))
contadora=1
apr=4

while(contadora<num):
	denominador=(contadora+2)
	apr=apr+(-1)*4/denominador
	
	contadora=contadora+1
	
print(round(apr, 8))
-- OUTPUT:
-12.00336714
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:21:58) 
-- CODE:
num=int(input("digite um numero: "))
contadora=1
apr=4

while(contadora<num):
	denominador=(contadora+2)
	apr=apr+(-1)*4/denominador
	
	contadora=contadora+1
	
print(round(apr, 8))
-- OUTPUT:
-12.00336714
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:22:10) 
-- CODE:
num=int(input("digite um numero: "))
contadora=1
apr=4

while(contadora<num):
	denominador=(contadora+2)
	apr=apr+(-1)*4/denominador
	
	contadora=contadora+1
	
print(round(apr, 8))
-- OUTPUT:
-12.00336714
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:22:52) 
-- CODE:
num=int(input("digite um numero: "))
contadora=1
apr=4

while(contadora<num):
	denominador=(contadora+2)
	apr=apr+(-1)*4/denominador
	
	contadora=contadora+1
	
print(round(apr, 8))
-- OUTPUT:
-12.00336714
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:23:03) 
-- CODE:
num=int(input("digite um numero: "))
contadora=1
apr=4

while(contadora<num):
	denominador=(contadora+2)
	apr=apr+(-1)*4/denominador
	
	contadora=contadora+1
	
print(round(apr, 8))
-- OUTPUT:
-12.00336714
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:26:21) 
-- CODE:
num=int(input("digite um numero: "))
contadora=1
apr=4

while(contadora<num):
	denominador=(contadora+2)
	apr=apr+(-1)**(contadora)*4/denominador
	
	contadora=contadora+1
	
print(round(apr, 8))
-- OUTPUT:
3.21286602
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:27:18) 
-- CODE:
num=int(input("digite um numero: "))
contadora=1
apr=3

while(contadora<num):
	denominador=(contadora+2)
	apr=apr+(-1)**(contadora)*4/denominador
	
	contadora=contadora+1
	
print(round(apr, 8))
-- OUTPUT:
2.21286602
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:27:58) 
-- CODE:
num=int(input("digite um numero: "))
contadora=1
apr=5

while(contadora<num):
	denominador=(contadora+2)
	apr=apr+(-1)**(contadora)*4/denominador
	
	contadora=contadora+1
	
print(round(apr, 8))
-- OUTPUT:
4.21286602
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:28:16) 
-- CODE:
num=int(input("digite um numero: "))
contadora=1
apr=2

while(contadora<num):
	denominador=(contadora+2)
	apr=apr+(-1)**(contadora)*4/denominador
	
	contadora=contadora+1
	
print(round(apr, 8))
-- OUTPUT:
1.21286602
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:28:34) 
-- CODE:
num=int(input("digite um numero: "))
contadora=1
apr=3

while(contadora<num):
	denominador=(contadora+2)
	apr=apr+(-1)**(contadora)*4/denominador
	
	contadora=contadora+1
	
print(round(apr, 8))
-- OUTPUT:
2.21286602
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:28:44) 
-- CODE:
num=int(input("digite um numero: "))
contadora=1
apr=3

while(contadora<num):
	denominador=(contadora+2)
	apr=apr+(-1)**(contadora)*4/denominador
	
	contadora=contadora+1
	
print(round(apr, 8))
-- OUTPUT:
2.21286602
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:29:04) 
-- CODE:
num=int(input("digite um numero: "))
contadora=1
apr=4

while(contadora<num):
	denominador=(contadora+2)
	apr=apr+(-1)**(contadora)*4/denominador
	
	contadora=contadora+1
	
print(round(apr, 8))
-- OUTPUT:
3.21286602
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:30:34) 
-- CODE:
num=int(input("digite um numero: "))
contadora=1
apr=4

while(contadora<num):
	denominador=(contadora+2)
	apr=apr+(-1)**(contadora)*(4/denominador)
	
	contadora=contadora+1
	
print(round(apr, 8))
-- OUTPUT:
3.21286602
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:31:02) 
-- CODE:
num=int(input("digite um numero: "))
contadora=1
apr=4

while(contadora<num):
	denominador=(contadora+2)
	apr=apr+(-1)*(4/denominador)
	
	contadora=contadora+1
	
print(round(apr, 8))
-- OUTPUT:
-12.00336714
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:31:24) 
-- CODE:
num=int(input("digite um numero: "))
contadora=1
apr=4

while(contadora<num):
	denominador=(contadora+2)
	apr=apr+(-1)**(contadora)*(4/denominador)
	
	contadora=contadora+1
	
print(round(apr, 8))
-- OUTPUT:
3.21286602
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:32:54) 
-- CODE:
num=int(input("digite um numero: "))
contadora=1
apr=4

while(contadora<num):
	denominador=(contadora+2)
	apr=apr+(-1)**(contadora+2)*(4/denominador)
	
	contadora=contadora+1
	
print(round(apr, 8))
-- OUTPUT:
3.21286602
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:33:07) 
-- CODE:
num=int(input("digite um numero: "))
contadora=1
apr=4

while(contadora<num):
	denominador=(contadora+2)
	apr=apr+(-1)**(contadora+3)*(4/denominador)
	
	contadora=contadora+1
	
print(round(apr, 8))
-- OUTPUT:
4.78713398
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:33:22) 
-- CODE:
num=int(input("digite um numero: "))
contadora=1
apr=4

while(contadora<num):
	denominador=(contadora+2)
	apr=apr+(-1)**(contadora+1)*(4/denominador)
	
	contadora=contadora+1
	
print(round(apr, 8))
-- OUTPUT:
4.78713398
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:33:48) 
-- CODE:
num=int(input("digite um numero: "))
contadora=1
apr=4

while(contadora<num):
	denominador=(contadora+2)
	apr=apr+(-1)**(contadora+0.5)*(4/denominador)
	
	contadora=contadora+1
	
print(round(apr, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print(round(apr, 8))
TypeError: type complex doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:34:02) 
-- CODE:
num=int(input("digite um numero: "))
contadora=1
apr=4

while(contadora<num):
	denominador=(contadora+2)
	apr=apr+(-1)**(contadora)*(4/denominador)
	
	contadora=contadora+1
	
print(round(apr, 8))
-- OUTPUT:
3.21286602
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:35:54) 
-- CODE:
num=int(input("digite um numero: "))
contadora=1
apr=4

while(contadora<num):
	denominador=(contadora+2)
	apr=apr+(-1)**(contadora+1)*(4/denominador)
	
	contadora=contadora+1
	
print(round(apr, 8))
-- OUTPUT:
4.78713398
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:39:11) 
-- CODE:
num=int(input("digite um numero: "))
contadora=1
apr=4

while(contadora<num):
	denominador=(contadora+2)
	apr=apr+(-1)**(contadora)*(4/denominador)
	
	contadora=contadora+1
	
print(round(apr, 8))
-- OUTPUT:
3.21286602
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:39:32) 
-- CODE:
num=int(input("digite um numero: "))
contadora=1
apr=4

while(contadora<num):
	denominador=(contadora+2)
	apr=apr+(-1)**(contadora)*(4/denominador)
	
	contadora=contadora+1
	
print(round(apr, 8))
-- OUTPUT:
3.21286602
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:40:21) 
-- CODE:
num=int(input("digite um numero: "))
contadora=1
apr=4

while(contadora<num):
	denominador=(contadora+2)
	apr=(apr+(-1)**(contadora))*(4/denominador)
	
	contadora=contadora+1
	
print(round(apr, 8))
-- OUTPUT:
-0.02836305
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:40:53) 
-- CODE:
num=int(input("digite um numero: "))
contadora=1
apr=4

while(contadora<num):
	denominador=(contadora+2)
	apr=apr+(-1)*(contadora)*(4/denominador)
	
	contadora=contadora+1
	
print(round(apr, 8))
-- OUTPUT:
-503.99326571
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:41:01) 
-- CODE:
num=int(input("digite um numero: "))
contadora=1
apr=4

while(contadora<num):
	denominador=(contadora+2)
	apr=apr+(-1)*(contadora)*(4/denominador)
	
	contadora=contadora+1
	
print(round(apr, 8))
-- OUTPUT:
-503.99326571
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:41:18) 
-- CODE:
num=int(input("digite um numero: "))
contadora=1
apr=4

while(contadora<num):
	denominador=(contadora+2)
	apr=apr+(-1)**(contadora)*(4/denominador)
	
	contadora=contadora+1
	
print(round(apr, 8))
-- OUTPUT:
3.21286602
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:43:20) 
-- CODE:
num=int(input("digite um numero: "))
contadora=1
apr=num

while(contadora<num):
	denominador=(contadora+2)
	apr=apr+(-1)**(contadora)*(4/denominador)
	
	contadora=contadora+1
	
print(round(apr, 8))
-- OUTPUT:
135.21286602
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:43:52) 
-- CODE:
num=int(input("digite um numero: "))
contadora=1
apr=1

while(contadora<num):
	denominador=(contadora+2)
	apr=apr+(-1)**(contadora)*(4/denominador)
	
	contadora=contadora+1
	
print(round(apr, 8))
-- OUTPUT:
0.21286602
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:55:14) 
-- CODE:
num=int(input("digite um numero: "))
contadora=1
apr=1

while(contadora<num):
	denominador=(contadora+2)
	apr=apr+(-1)**(contadora)*(4/denominador)
	
	contadora=contadora+1
	
print(round(apr, 8))
-- OUTPUT:
0.21286602
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:55:27) 
-- CODE:
num=int(input("digite um numero: "))
contadora=1
apr=1

while(contadora<num):
	denominador=(contadora+2)
	apr=apr+(-1)**(contadora)*(4/denominador)
	
	contadora=contadora+1
	
print(round(apr, 8))
-- OUTPUT:
0.21286602
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:56:10) 
-- CODE:
num=int(input("digite um numero: "))
contadora=1
apr=1

while(contadora<num):
	denominador=(contadora+2)
	apr=apr+(-1)**(contadora)*(4/denominador)
	
	contadora=contadora+1
	
print(round(apr, 8))
-- OUTPUT:
0.21286602
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:56:32) 
-- CODE:
num=int(input("digite um numero: "))
contadora=1
apr=1

while(contadora<num):
	denominador=(contadora+2)
	apr=apr+(-1)**(contadora)*4/denominador
	
	contadora=contadora+1
	
print(round(apr, 8))
-- OUTPUT:
0.21286602
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:56:43) 
-- CODE:
num=int(input("digite um numero: "))
contadora=1
apr=1

while(contadora<num):
	denominador=(contadora+2)
	apr=apr+(-1)**(contadora+2)*4/denominador
	
	contadora=contadora+1
	
print(round(apr, 8))
-- OUTPUT:
0.21286602
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:57:19) 
-- CODE:
num=int(input("digite um numero: "))
contadora=1
apr=1

while(contadora<num):
	denominador=(contadora+2)
	apr=apr+(-1)**(contadora+2)*4/denominador
	
	contadora=contadora+1
	
print(round(apr, 8))
-- OUTPUT:
0.21286602
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:57:53) 
-- CODE:
num=int(input("digite um numero: "))
contadora=1
apr=1

while(contadora<num):
	denominador=(contadora+2)
	apr=apr+(-1)**(contadora)*4/denominador
	
	contadora=contadora+1
	
print(round(apr, 8))
-- OUTPUT:
0.21286602
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:58:32) 
-- CODE:
num=int(input("digite um numero: "))
contadora=1
apr=1

while(contadora<num):
	denominador=(contadora+2)
	apr=apr+(-1)**(contadora+1)*4/denominador
	
	contadora=contadora+1
	
print(round(apr, 8))
-- OUTPUT:
1.78713398
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:58:41) 
-- CODE:
num=int(input("digite um numero: "))
contadora=1
apr=1

while(contadora<num):
	denominador=(contadora+2)
	apr=apr+(-1)**(contadora+2)*4/denominador
	
	contadora=contadora+1
	
print(round(apr, 8))
-- OUTPUT:
0.21286602
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:58:51) 
-- CODE:
num=int(input("digite um numero: "))
contadora=1
apr=1

while(contadora<num):
	denominador=(contadora+2)
	apr=apr+(-1)**(contadora)*4/denominador
	
	contadora=contadora+1
	
print(round(apr, 8))
-- OUTPUT:
0.21286602
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:59:03) 
-- CODE:
num=int(input("digite um numero: "))
contadora=1
apr=4

while(contadora<num):
	denominador=(contadora+2)
	apr=apr+(-1)**(contadora)*4/denominador
	
	contadora=contadora+1
	
print(round(apr, 8))
-- OUTPUT:
3.21286602
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:59:29) 
-- CODE:
num=int(input("digite um numero: "))
contadora=1
apr=4

while(contadora<num):
	denominador=(contadora+2)
	apr=apr+(-1)**(contadora)*4/denominador
	
	contadora=contadora+1
	
print(round(apr, 8))
-- EXECUTION TIME:
0.152225
-- TEST CASE 1:
---- input:
136
---- correct output:
3.13423981
---- user output:
3.21286602
-- TEST CASE 2:
---- input:
22
---- correct output:
3.09616153
---- user output:
3.14234334
-- TEST CASE 3:
---- input:
15
---- correct output:
3.20818565
---- user output:
3.3485126
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:59:43) 
-- CODE:
num=int(input("digite um numero: "))
contadora=1
apr=4

while(contadora<num):
	denominador=(contadora+2)+
	apr=apr+(-1)**(contadora)*4/denominador
	
	contadora=contadora+1
	
print(round(apr, 8))
-- ERROR:
File "XXXX", line 6
    denominador=(contadora+2)+
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:59:55) 
-- CODE:
num=int(input("digite um numero: "))
contadora=1
apr=4

while(contadora<num):
	denominador=(contadora+2)
	apr=apr+(-1)**(contadora)*4/denominador
	
	contadora=contadora+1
	
print(round(apr, 8))
-- OUTPUT:
3.21286602
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
